app/app.global.scss
@import "./colors.global.scss";
@import "./spacers.global.scss";

body {
  position: relative;
  color: $primary-green;
  height: 100vh;
  background-color: $background-dark;
}

* {
  overflow: hidden;
}

ul {
  margin: 0;
  padding-left: 20px;
}

.grid-list {
  display: grid;
  grid-gap: 1em 1em;

  &.center-items {
    justify-items: center;
  }
}

.grid-item-center {
  justify-self: center;
}

.clear-space {
  margin: 6px;
}

.main-padding {
  padding: 20px;
}

.flex-horizontal-split {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.full-width {
  width: 100%;
}

.unselectable {
  cursor: default;
  user-select: none;
}

.capitalize {
  text-transform: capitalize;
}

